Code improvements from static analysis